src/sass/_header.scss
.header {
  background-color: $primary-green;
}
.header-container {
  z-index: 2;
  position: relative;
  display: flex;
  align-items: center;
  padding-top: 12px;

  @include tablet {
    padding-top: 20px;
  }

  @include desktop {
    padding-top: 8px;
    align-items: flex-end;
  }
}

.logo {
  z-index: 1;

  @include tablet {
    margin-right: auto;
  }

  @include desktop {
    margin-right: 308px;
  }
}

.header_nav {
  display: flex;
  @media screen and (max-width: 1199px) {
    position: fixed;
    top: 0;
    left: 100%;
    width: 100%;
    height: 100vh;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding-top: 100px;
    padding-bottom: 64px;
    overflow-y: scroll;
    background-color: $primary-green;
    transition: transform 250ms ease-in-out;

    &.is-open {
      transform: translateX(-100%);
    }
    @include tablet {
      padding-top: 140px;
      background-color: $tablet-menu;
    }
  }

  @include desktop {
    margin-right: auto;
  }
}

.header-list {

  display: flex;
  flex-direction: column;
  gap: 32px;
  align-items: center;

  @include tablet {
    gap: 40px;
  }

  @include desktop {
    flex-direction: row;
    gap: 28px;
  }
}
.header-list-link::after {
 @media screen and (max-width: 1199px) {
 content: '';
bottom: 1px;
left: 0;
width: 100%;
height: 3px;
border-radius: 2px;
   position: absolute;
display: inline-block;
background: $primary-dark;
transform: scaleX(0);   transition: transform 250ms ease-in-out;
transform-origin: left;
 }

@media screen and (min-width: 1200px) {
content: '';
bottom: 1px;
left: 0;
width: 100%;
height: 3px;
border-radius: 2px;
position: absolute;
display: inline-block;
background: $primary-yellow;
 transform: scaleX(0);
transition: transform 250ms ease-in-out;
 transform-origin: left;
 }
}

.header-list-link:hover:after {
transform: scaleX(1);
}

.header-list-link {
  position: relative;
  font-weight: 700;
  font-size: 32px;
  line-height: calc(39 / 32);
  color: $primary-light;
  transition: color 250ms ease-in-out;
  &:focus,
  &:active {
    color: $primary-dark;
  }

  @include tablet {
    font-size: 48px;
    line-height: calc(59 / 48);
  }

  @include desktop {
    display: block;
    font-size: 16px;
    line-height: calc(20 / 16);
    padding-top: 13px;
    padding-bottom: 13px;

    &:hover,
    &:focus,
    &:active {
      color: $primary-yellow;
    }
  }
}

.buy-now-button {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 152px;
  height: 42px;
  padding: 0;
  border-radius: 10px;
  font-size: 14px;
  font-weight: 600;
  line-height: calc(17 / 14);
  background-color: $primary-yellow;
  color: $primary-dark;
  transition: all .5s ease;

  &:disabled {
      background-color: $primary-grey;
    }
  @include tablet {
    &:focus,
    &:active {
      background-color: $green-hover;
      color: $primary-light;
    }
  }
  @include desktop {
    &:hover {
      background-color: $green-hover;
    }
  }
}

.mobile-visible {
  &:focus,
  &:active {
    background-color: $green-hover;
    color: $primary-light;
  }
}

.buy-now-icon {
  margin-left: 5px;
  fill: currentColor;
}

.mobile-visible {
  @media screen and (min-width: 1200px) {
    display: none;
  }
}

.menu-button {
  display: inline-block;
  width: 32px;
  height: 32px;
  margin-left: auto;
  padding: 0;
  border: none;
  background-color: transparent;
  color:$primary-light;
  z-index: 1;

  @include tablet {
    margin-right: 32px;

    &.is-open {
      position: absolute;
      top: 32px;
      right: 32px;
    }
  }

  @include desktop {
    display: none;
  }
}
.menu-button-icon {
  fill: currentColor;
}

.menu-button.is-open .menu-icon-cros {
  display: none;
}
.menu-icon-cros {
  width:24px;
  height:16px;
}
.menu-icon-cros {
  width: 19.21px;
  height: 19.21px;
}

.menu-icon-close {
  display: none;

  .menu-button.is-open & {
    display: block;
  }
}

.desktop-visible {
  @media screen and (max-width: 767px) {
    display: none;
  }
}

/*------HEADER MODAL---------------*/
.header-modal {
  margin-top: 5vh;
}
.header-modal::after{
  content: '';
    width: 100%;
    height: 5vh;
    display: block;
    position: absolute;
  }
  
  .backdrop.is-hidden .header-modal {
    transform: translate(-50%, -50%) scale(0);
  }
.buy-now-title {
  margin-bottom: 20px;
  font-family: $font-seymour;
  font-size: 16px;
  line-height: 1.5;
  text-align: center;

  @include tablet {
    margin-bottom: 40px;
    font-size: 20px;
    line-height: 1.4;
  }
}

.buy-now-radio-buttons {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin-bottom: 32px;

  @include tablet {
    flex-direction: row;
    gap: 32px;
    margin-bottom: 40px;
  }
}

.buy-now-radio-button {
  position: relative;
  width: 132px;
  height: 200px;
  margin: 0 auto;
}

.radio-button-input {
  display: none;
}

.radio-button-chekbox {
  width: 132px;
  height: 136px;
  margin-top: 63px;
  border-radius: 15px;
}
.radio-button-label span{
  display: block;
}

.radio-button-chekbox--green {
  border: 2px solid $green-outline;
  background-color: transparent;
  transition: background-color 250ms ease-in-out, box-shadow 250ms ease-in-out;
}

.radio-button-chekbox--yellow {
  border: 2px solid $yellow-bg;
  background-color: transparent;
  transition: background-color 250ms ease-in-out, box-shadow 250ms ease-in-out;
}

.radio-button-chekbox--brown {
  border: 2px solid $primary-whiskey;
  background-color: transparent;
  transition: background-color 250ms ease-in-out, box-shadow 250ms ease-in-out;
}

.radio-button-input:checked + .radio-button-chekbox--green {
  background-color: $green-outline;
  box-shadow: 0px 5.26027px 19.726px rgba(212, 20, 67, 0.1);
}

.radio-button-input:checked + .radio-button-chekbox--yellow {
  background-color: $yellow-bg;
  box-shadow: 0px 5.26027px 19.726px rgba(212, 20, 67, 0.1);
}

.radio-button-input:checked + .radio-button-chekbox--brown {
  background-color: $primary-whiskey;
  box-shadow: 0px 5.26027px 19.726px rgba(212, 20, 67, 0.1);
}

.radio-img {
  position: absolute;
  left: 0;
  top: 0;
  border-radius: 50%;
  z-index: 2;
}

.radio-img-circle {
  width: 132px;
  height: 132px;
  border-radius: 50%;
  position: absolute;
  top: 7px;
  left: 0;
}

.radio-img-circle--green {
  background: linear-gradient(
      0deg,
      rgba(156, 190, 143, 0.7),
      rgba(156, 190, 143, 0.7)
    ),
    $light-grey;
  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
}

.radio-img-circle--yellow {
  background: linear-gradient(
      0deg,
      rgba(248, 210, 78, 0.7),
      rgba(248, 210, 78, 0.7)
    ),
    $light-grey;
  box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
}

.radio-img-circle--brown {
  background: linear-gradient(
      0deg,
      rgba(213, 117, 63, 0.7),
      rgba(213, 117, 63, 0.7)
    ),
    $light-grey;
  box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
}

.radio-button-title {
  margin-top: 96px;
  text-align: center;
  font-weight: 700;
  font-size: 16px;
  line-height: calc(20 / 16);
  letter-spacing: 0.04em;
  text-transform: uppercase;
  color: $primary-dark;
}

.buy-now-input-wrap {
  display: flex;
  flex-direction: column;
  gap: 12px;
  margin-bottom: 26px;

  @include tablet {
    gap: 16px;
    width: 368px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 32px;
  }
}

.buy-now-input {
  outline: none;
  width: 100%;
  height: 32px;
  padding: 8px 12px;
  border: 1px solid $primary-green;
  border-radius: 10px;
  background-color: $input-bg;
  font-size: 12px;
  line-height: 1.4;
  color: $primary-dark;
  transition: border 250ms ease-in-out, background-color 250ms ease-in-out;

  @include tablet {
    font-size: 14px;
    height: 42px;
  }
}

.buy-now-textarea {
  resize: none;
  width: 100%;
  height: 65px;
  padding: 8px 12px;
  border: 1px solid $primary-green;
  border-radius: 10px;
  background-color: $input-bg;
  outline: 0;
  transition: border 250ms ease-in-out, background-color 250ms ease-in-out;

  @include tablet {
    height: 84px;
  }
}

.buy-now-textarea::placeholder {
  font-size: 12px;
  line-height: 1.4;
  color: $primary-dark;

  @include tablet {
    font-size: 14px;
  }
}

